fix(css): aligns dates with posts

--- a/assets/css/index.sass
+++ b/assets/css/index.sass
@@ -11,7 +11,7 @@
 // date alignment
 sub
 	position: relative
-	bottom: 0.1em
+	bottom: 0.225em
 	left: 0.75em 
 
 // general
